--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "greenlet>=3.2.4",
     "gunicorn>=23.0.0",
     "langchain-google-genai>=2.1.10",
+    "langchain-tavily>=0.2.11",
     "langgraph>=0.6.7",
     "langgraph-checkpoint-postgres>=2.0.23",
     "langmem>=0.0.29",
