--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "langgraph>=0.6.7",
     "langgraph-checkpoint-postgres>=2.0.23",
     "langmem>=0.0.29",
+    "httpx>=0.27.0",
     "pydantic>=2.11.9",
     "pydantic-settings>=2.10.1",
     "pyjwt>=2.10.1",
@@ -25,4 +26,12 @@ dependencies = [
     "redis>=6.4.0",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
+    "python-multipart>=0.0.20",
+    "apscheduler>=3.11.0",
+]
+
+[dependency-groups]
+dev = [
+    "mypy>=1.18.2",
+    "ruff>=0.13.1",
 ]
